# DBT-RISE-RISCV

./: .cproject  .envrc  .gitignore  .gitmodules  .project  CMakeLists.txt  CMakeLists.txt.orig  CMakePresets.json  LICENSE  README.md  build.sh  conanfile.py  conanfile.txt  cycles.txt  simple-system.json  system.json
.github/workflows/: ci-compile.yml  ci.yml
cmake/: Common.cmake  Conan.cmake  FindTcmalloc.cmake  GitFunctions.cmake  Submodules.cmake
contrib/: generate_custom_cores.sh
contrib/fw/: .gitignore
contrib/fw/hello-world/: .gitignore  Makefile  hello.c
contrib/fw/pmp-64entry-addr-test/: pmp_64entry_addr_test.S
contrib/fw/pmp-64entry-cfg-test/: pmp_64entry_cfg_test.S
contrib/fw/pmp-8entry-guard-test/: pmp_8entry_guard_test.S
contrib/fw/pmp-cfg2-test/: pmp_cfg2_test.S
contrib/fw/pmp-csr-test/: pmp_csr_test.S
contrib/fw/pmp-enforce-test/: pmp_enforce_test.S
contrib/fw/pmp-shift-test/: pmp_shift_test.S
contrib/fw/pmp-tor-test/: pmp_tor_test.S
contrib/fw/pmp-upper-cfg-test/: pmp_upper_cfg_test.S
contrib/instr/: RV32GCV_instr.yaml  RV32GC_instr.yaml  RV32IMACF_instr.yaml  RV32IMAC_instr.yaml  RV32I_instr.yaml  RV64GCV_instr.yaml  RV64GC_instr.yaml  RV64IMAC_instr.yaml  RV64I_instr.yaml  TGC5C_instr.yaml
etc/: CoreDSL generator.launch  cmake DBT-RISE-RISCV Debug.launch  cmake DBT-RISE-RISCV Release.launch  cmake.sh  dbt-riscv Debug hello gdb.launch  dbt-riscv Debug hello w plugin.launch  dbt-riscv SC Debug hello.launch  dbt-riscv dhrystone.launch  hello Debug.launch
gen_input/: RISCVBase.core_desc  RV32I.core_desc  RVA.core_desc  RVC.core_desc  RVD.core_desc  RVF.core_desc  RVM.core_desc  TGFS.core_desc  cores.core_desc  minres_rv.core_desc
gen_input/templates/: CORENAME.cpp.gtl  CORENAME.h.gtl  CORENAME_cyles.txt.gtl  CORENAME_instr.yaml.gtl  CORENAME_sysc.cpp.gtl  vm-vm_CORENAME.cpp.gtl
gen_input/templates/asmjit/: CORENAME.cpp.gtl
gen_input/templates/interp/: CORENAME.cpp.gtl  vm-vm_CORENAME.cpp.gtl
gen_input/templates/llvm/: CORENAME.cpp.gtl  incl-CORENAME.h.gtl  src-CORENAME.cpp.gtl  vm-vm_CORENAME.cpp.gtl
gen_input/templates/tcc/: CORENAME.cpp.gtl  src-CORENAME.cpp.gtl  vm-vm_CORENAME.cpp.gtl
html/: app.js  ws.html
incl/iss/arch/: mnrv32.h  riscv_hart_msu_vp.h  rv32gc.h  rv32imac.h  rv64gc.h  rv64i.h  tgf01.h  tgf02.h
incl/sysc/: core_complex.h
platform/: CMakeLists.txt
platform/gen_input/: aon.rdl  fe310.rdl  plic.rdl  prci.rdl  pwm.rdl
platform/incl/sysc/: sc_comm_singleton.h  tlm_extensions.h
platform/incl/sysc/SiFive/: aon.h  clint.h  fe310.h  gpio.h  hifive1.h  plic.h  prci.h  pwm.h  spi.h  uart.h
platform/incl/sysc/top/: BLDC.h  dcmotor.h  h_bridge.h  hifive1.h  mcp3008.h  mcp_adc.h  system.h  terminal.h
platform/src/: CLIParser.cpp  CLIParser.h  CMakeLists.txt  sc_main.cpp
platform/src/sysc/: BLDC.cpp  aon.cpp  clint.cpp  dcmotor.cpp  fe310.cpp  gpio.cpp  h_bridge.cpp  hifive1.cpp  mcp3008.cpp  mcp_adc.cpp  plic.cpp  prci.cpp  pwm.cpp  sc_comm_singleton.cpp  spi.cpp  system.cpp  terminal.cpp  uart.cpp
riscv/: .project  CMakeLists.txt  gpio.rdl  plic.rdl
riscv.sc/: CMakeLists.txt
riscv.sc/gen_input/: clint.rdl  fe310.rdl  gpio.rdl  plic.rdl  spi.rdl  uart.rdl
riscv.sc/incl/: cli_options.h
riscv.sc/incl/iss/arch/: riscv_hart_msu_vp.h  rv32imac.h
riscv.sc/incl/sysc/: core_complex.h  sc_comm_singleton.h  sc_singleton.h  tlm_extensions.h
riscv.sc/incl/sysc/General/: mcp3008.h  system.h  terminal.h
riscv.sc/incl/sysc/SiFive/: aon.h  clint.h  core_complex.h  gpio.h  platform.h  plic.h  prci.h  spi.h  uart.h
riscv.sc/src/: CMakeLists.txt  core_complex.cpp  sc_main.cpp
riscv.sc/src/internal/: vm_rv32imac.cpp
riscv.sc/src/iss/: rv32imac.cpp  rv64ia.cpp
riscv.sc/src/sysc/: aon.cpp  clint.cpp  core_complex.cpp  gpio.cpp  mcp3008.cpp  platform.cpp  plic.cpp  prci.cpp  sc_comm_singleton.cpp  sc_singleton.cpp  spi.cpp  system.cpp  terminal.cpp  uart.cpp
riscv/gen_input/: RV32A.core_desc  RV32C.core_desc  RV32D.core_desc  RV32F.core_desc  RV32I.core_desc  RV32IBase.core_desc  RV32M.core_desc  RV64A.core_desc  RV64I.core_desc  RV64IBase.core_desc  RV64M.core_desc  RVA.core_desc  RVC.core_desc  RVD.core_desc  RVF.core_desc  RVM.core_desc  minres_rv.core_desc
riscv/gen_input/templates/: CORENAME_cyles.txt.gtl  incl-CORENAME.h.gtl  src-CORENAME.cpp.gtl  vm-vm_CORENAME.cpp.gtl  vm_riscv.in.cpp
riscv/incl/: cli_options.h
riscv/incl/iss/arch/: minrv_ima.h  riscv_core.h  riscv_hart_msu_vp.h  rv32gc.h  rv32imac.h  rv64gc.h  rv64ia.h
riscv/incl/iss/debugger/: riscv_target_adapter.h
riscv/incl/iss/plugin/: cycle_estimate.h  instruction_count.h
riscv/incl/sysc/SiFive/: core_complex.h  spi.h  uart.h
riscv/src/: CMakeLists.txt  RV32A.core_desc  RV32C.core_desc  RV32F.core_desc  RV32IBase.core_desc  RV32M.core_desc  RV64IBase.core_desc  main.cpp  minres_rv.core_desc  sc_main.cpp
riscv/src/internal/: fp_functions.cpp  vm_minrv_ima.cpp  vm_riscv.in.cpp  vm_rv32gc.cpp  vm_rv32imac.cpp  vm_rv64gc.cpp  vm_rv64i.cpp  vm_rv64ia.cpp
riscv/src/iss/: minrv_ima.cpp  rv32gc.cpp  rv32imac.cpp  rv64ia.cpp
riscv/src/plugin/: cycle_estimate.cpp  instruction_count.cpp
riscv/src/sysc/: core_complex.cpp  gpio.cpp  plic.cpp  spi.cpp  uart.cpp
softfloat/: CMakeLists.txt
src/: elfio.cpp  main.cpp
src-gen/: .gitignore
src/internal/: fp_functions.cpp  vm_rv32gc.cpp  vm_rv32imac.cpp  vm_rv64gc.cpp  vm_rv64i.cpp
src/iss/: factory.h  mnrv32.cpp  rv32gc.cpp  rv32imac.cpp  rv64gc.cpp  rv64i.cpp  tgf01.cpp  tgf02.cpp
src/plugin/: GCOV.cpp  cycle_estimate.cpp  instruction_count.cpp
src/sysc/: core2sc_adapter.h  core_complex.cpp  core_complex.h  core_complex_if.h  core_complex_mt.cpp  core_complex_mt.h  core_facade.h  instr_recorder.h  iss_factory.h  memspace_dispatcher.h  memspace_extension.h  register_cores.cpp  register_rv32gcv.cpp  register_rv64gcv.cpp  register_tgc_c.cpp  sc2core_if.h  sc_core_adapter.h  sc_core_adapter_if.h
src/vm/: aes_sbox.h  fp_functions.cpp  fp_functions.h  new_vector_functions.cpp  new_vector_functions.h  vector_functions.cpp  vector_functions.h  vector_functions.hpp
(+101 files in other folders)
